auto: backend/services/user-service/src/main/java/com/musicdreamer/service/impl/RoleServiceImpl.java,